fixed two bugs. first was chat container was overflowing. it no longer overflows. Bug 2 was onKeyDPress is deprecated, so used fix onKeyDown.

--- a/ReactProjects/Chatapp/client/src/App.css
+++ b/ReactProjects/Chatapp/client/src/App.css
@@ -80,7 +80,7 @@ body {
 
   position: relative;
 }
-.chat-window .chat-body .message-container {
+.chat-window .chat-body {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
@@ -88,7 +88,7 @@ body {
 }
 
 .chat-window .chat-body .message-container::-webkit-scrollbar {
-  display: none;
+  display: bottom;
 }
 .chat-window .chat-body .message {
   height: auto;
